<resources>
    <string name="app_name">Сalculator</string>
    <string name="text_button_8">8</string>
    <string name="text_button_7">7</string>
    <string name="text_button_3">3</string>
    <string name="text_button_share">/</string>
    <string name="text_button_2">2</string>
    <string name="text_button_c">C</string>
    <string name="text_button_4">4</string>
    <string name="text_button_point">.</string>
    <string name="text_button_6">6</string>
    <string name="text_button_subtraction">-</string>
    <string name="text_button_sum">+</string>
    <string name="text_button_result">=</string>
    <string name="text_button_multiplication">*</string>
    <string name="text_button_1">1</string>
    <string name="text_button_0">0</string>
    <string name="text_button_5">5</string>
    <string name="text_button_9">9</string>
</resources>