<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
   >

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginBottom="@dimen/margin_button"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_8"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:text="@string/text_button_7"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_3"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button14"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_share"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_2"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button15"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:text="@string/text_button_c"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:text="@string/text_button_4"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button11"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_point"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_6"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button17"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_subtraction"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button16" />

    <Button
        android:id="@+id/button13"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width_face"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_sum"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button12"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width_face"
        android:text="@string/text_button_result"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@+id/button13"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button16"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_multiplication"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button14" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:text="@string/text_button_1"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="@dimen/width_face"
        android:layout_height="@dimen/width"
        android:text="@string/text_button_0"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_5"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/width"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_button_9"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:inputType="number"
        android:background="@drawable/screen_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/vertical_bias" />

</androidx.constraintlayout.widget.ConstraintLayout>